UI Buttons: Alt key (all selected) edition does not autokey F-curves of non-active ID #48210

Closed
opened 2016-04-20 10:07:48 +02:00 by Fabien Devaux · 6 comments

System Information

GTX760 / ArchLinux x86_64

Blender Version

Blender 2.77a abf6f08 "makepkg" branch

Exact steps for others to reproduce the error

After opening the file, try to move Z location of the two planes (just press g) : it works well

Now try to Alt+Slide some value on the right "n" panel : only the active handle is updated.

bug-fcurve.blend

**System Information** GTX760 / ArchLinux x86_64 **Blender Version** Blender 2.77a abf6f08 "makepkg" branch **Exact steps for others to reproduce the error** After opening the file, try to move Z location of the two planes (just press g) : it works well Now try to Alt+Slide some value on the right "n" panel : only the active handle is updated. [bug-fcurve.blend](https://archive.blender.org/developer/F304478/bug-fcurve.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @FabienDevaux

Added subscriber: @FabienDevaux
Bastien Montagne changed title from Alt key is not allowing editition of multiple F-curves (modifier or simple) properties to UI Buttons: Alt key (all selected) edition does not autokey F-curves of non-active ID 2016-04-21 15:38:31 +02:00

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29
Campbell Barton was assigned by Bastien Montagne 2016-04-21 15:43:31 +02:00

Problem is autokey when editing buttons is handled by ui_apply_but_autokey(), which uses active button’s related data, and not all other data from 'SelectContext'…

@ideasman42 this looks like TODO (missing implementation), unless autokey of all selected was purposely not enabled?

Problem is autokey when editing buttons is handled by `ui_apply_but_autokey()`, which uses active button’s related data, and not all other data from 'SelectContext'… @ideasman42 this looks like TODO (missing implementation), unless autokey of all selected was purposely not enabled?

This issue was referenced by 08be000637

This issue was referenced by 08be000637b6610b59d3f2e47d666a64bd4fbb22

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48210
No description provided.