Fix T48210: Editing all selected buttons fails to auto-key